# TemplateInvestigation

./: .gitignore  CMakeLists.txt  LICENSE  Meta.txt  README.md
test_01/: CMakeLists.txt  script.ps1
test_02/: CMakeLists.txt
test_03/: CMakeLists.txt  script.ps1
test_04/: CMakeLists.txt  script.ps1
test_05/: CMakeLists.txt  script.ps1
test_06/: CMakeLists.txt
test_07/: CMakeLists.txt  pch.h
test_08/: CMakeLists.txt
test_09/: CMakeLists.txt
test_10/: CMakeLists.txt
test_11/: CMakeLists.txt
test_12/: CMakeLists.txt
test_13/: CMakeLists.txt  script.ps1
test_14/: CMakeLists.txt
test_15/: CMakeLists.txt
test_16/: 95percent.h  CMakeLists.txt
test_17/: CMakeLists.txt  pch.h
test_18/: 10percent.h  CMakeLists.txt
test_19/: CMakeLists.txt
test_20/: CMakeLists.txt  pch.h
test_21/: CMakeLists.txt  pch.h
test_22/: CMakeLists.txt  pch.h
test_23/: CMakeLists.txt  pch.h
test_24/: CMakeLists.txt
test_25/: 95percent.h  CMakeLists.txt
test_26/: CMakeLists.txt  pch.h
test_27/: CMakeLists.txt  pch.h
test_28/: 95percent.h  CMakeLists.txt
test_29/: CMakeLists.txt  pch.h
test_30/: 10percent.h  CMakeLists.txt
test_31/: CMakeLists.txt
test_32/: CMakeLists.txt  pch.h
test_33/: 10percent.h  CMakeLists.txt
test_34/: CMakeLists.txt  pch.h
test_35/: CMakeLists.txt  pch.h
test_36/: CMakeLists.txt
test_37/: CMakeLists.txt  script.ps1
test_38/: CMakeLists.txt  pch.h
test_39/: 10percent.h  CMakeLists.txt  pch.h
test_40/: CMakeLists.txt
test_41/: CMakeLists.txt  pch.h
test_42/: CMakeLists.txt  pch.h
test_43/: CMakeLists.txt  pch.h
test_44/: CMakeLists.txt  pch.h
test_45/: 10percent.h  CMakeLists.txt  pch.h
test_46/: CMakeLists.txt
test_47/: CMakeLists.txt  pch.h
test_48/: CMakeLists.txt
test_49/: CMakeLists.txt  pch.h
(+3 files in other folders)
