cmake_minimum_required(VERSION 3.16)

project(TemplateInvestigation)

add_subdirectory(test_01)
add_subdirectory(test_02)
add_subdirectory(test_03)
add_subdirectory(test_04)
add_subdirectory(test_05)
add_subdirectory(test_06)

add_subdirectory(test_07)
add_subdirectory(test_08)
add_subdirectory(test_09)

add_subdirectory(test_10)
add_subdirectory(test_11)
add_subdirectory(test_12)
add_subdirectory(test_13)

add_subdirectory(test_14)
add_subdirectory(test_15)
add_subdirectory(test_16)

add_subdirectory(test_17)
add_subdirectory(test_18)
add_subdirectory(test_19)

add_subdirectory(test_20)
add_subdirectory(test_21)
add_subdirectory(test_22)

add_subdirectory(test_23)
add_subdirectory(test_24)
add_subdirectory(test_25)

add_subdirectory(test_26)
add_subdirectory(test_27)
add_subdirectory(test_28)

add_subdirectory(test_29)
add_subdirectory(test_30)
add_subdirectory(test_31)

add_subdirectory(test_32)
add_subdirectory(test_33)
add_subdirectory(test_34)
add_subdirectory(test_35)
add_subdirectory(test_36)
add_subdirectory(test_37)
add_subdirectory(test_38)
add_subdirectory(test_39)
add_subdirectory(test_40)

add_subdirectory(test_41)
add_subdirectory(test_42)
add_subdirectory(test_43)
add_subdirectory(test_44)
add_subdirectory(test_45)
add_subdirectory(test_46)
add_subdirectory(test_47)
add_subdirectory(test_48)
add_subdirectory(test_49)
